--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
 	<artifactId>tp-xml-maven</artifactId>
 	<version>0.1</version>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.7</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
